--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,48 +1,47 @@
 {
-  "name": "@2x4/web",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite --port 3000",
-    "start": "vite --port 3000",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
-    "test": "vitest run",
-    "check-types": "tsc --noEmit",
-    "deploy": "vercel deploy --prod"
-  },
-  "dependencies": {
-    "@convex-dev/react-query": "^0.0.0-alpha.11",
-    "@kinde-oss/kinde-auth-react": "^5.5.1",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.83.0",
-    "@tanstack/react-router": "^1.121.2",
-    "@tanstack/react-router-devtools": "^1.121.2",
-    "@tanstack/react-router-with-query": "^1.130.1",
-    "@tanstack/router-plugin": "^1.121.2",
-    "autumn-js": "^0.0.115",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.526.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
-  },
-  "devDependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^26.0.0",
-    "tw-animate-css": "^1.3.6",
-    "typescript": "^5.7.2",
-    "vite": "^6.1.0",
-    "vitest": "^3.0.5",
-    "web-vitals": "^4.2.4"
-  }
+	"name": "@2x4/web",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite --port 3000",
+		"start": "vite --port 3000",
+		"build": "tsc && vite build",
+		"serve": "vite preview",
+		"test": "vitest run",
+		"check-types": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@convex-dev/react-query": "^0.0.0-alpha.11",
+		"@kinde-oss/kinde-auth-react": "^5.5.1",
+		"@radix-ui/react-accordion": "^1.2.11",
+		"@radix-ui/react-progress": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@tailwindcss/vite": "^4.1.11",
+		"@tanstack/react-query": "^5.83.0",
+		"@tanstack/react-router": "^1.121.2",
+		"@tanstack/react-router-devtools": "^1.121.2",
+		"@tanstack/react-router-with-query": "^1.130.1",
+		"@tanstack/router-plugin": "^1.121.2",
+		"autumn-js": "^0.0.115",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.526.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.11"
+	},
+	"devDependencies": {
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/react": "^16.2.0",
+		"@types/react": "^19.0.8",
+		"@types/react-dom": "^19.0.3",
+		"@vitejs/plugin-react": "^4.3.4",
+		"jsdom": "^26.0.0",
+		"tw-animate-css": "^1.3.6",
+		"typescript": "^5.7.2",
+		"vite": "^6.1.0",
+		"vitest": "^3.0.5",
+		"web-vitals": "^4.2.4"
+	}
 }
